[metadata]
name = mip_datatools
version = attr: mip_datatools.VERSION
author = Sebastien Tourbier
author_email = sebastien.tourbier@alumni.epfl.ch
maintainer = The MIP Team
description = Python tools to manipulate Metadata schema of Common Data Elements for the federations of the Medical Informatics Platform (MIP).
long_description = file: README.md,
long_description_content_type = text/markdown,
keywords = mip, data, json, schema, cde, metadata, python
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9

[options.package_data]
* = *.txt, *.rst, *.md, *.qss
hello = *.msg

[options.entry_points]
console_scripts =
    mip_update_cdes_json = mip_datatools.cli.mip_update_cdes_json:main
    mip_dataset_mapper_ui = mip_datatools.ui.mip_dataset_mapper_ui:main

[options.extras_require]
dev =
    setuptools
    wheel

docs =
    sphinx
    sphinx_rtd_theme
    sphinx-autobuild
    sphinxcontrib-napoleon

[options.packages.find]
exclude =
    docs*
    tests*
