[metadata]
name = mip_dmp
version = attr: mip_dmp.VERSION
author = Sebastien Tourbier
author_email = sebastien.tourbier@alumni.epfl.ch
maintainer = The MIP Team
description = Python tool with Graphical User Interface to map datasets to specific CDEs (Common Data Elements) metadata schema of a federation of the MIP (Medical Informatics Platform).
long_description = file: README.md,
long_description_content_type = text/markdown,
keywords = mip, data, json, schema, cde, metadata, python
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9

[options.package_data]
* = *.txt, *.rst, *.md, *.qss
hello = *.msg

[options.entry_points]
console_scripts =
    mip_dataset_mapper_ui = mip_dmp.ui.mip_dataset_mapper_ui:main
    mip_dataset_mapper = mip_dmp.cli.mip_dataset_mapper_cli:main
[options.extras_require]
dev =
    setuptools
    wheel

docs =
    sphinx
    sphinx_rtd_theme
    sphinx-autobuild
    sphinxcontrib-napoleon

[options.packages.find]
exclude =
    docs*
    tests*
